extras/cilium/not-used/coredns-upstream-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "coredns-upstream-egress"
spec:
  # Target ONLY the CoreDNS pods
  endpointSelector:
    matchLabels:
      "k8s:io.kubernetes.pod.namespace": kube-system
      "k8s:k8s-app": kube-dns
  egress:
    - toEntities:
      - world
    - toCIDR:
      - 192.168.0.1/32  # Your specific upstream DNS IP from the logs
      toPorts:
        - ports:
           - port: "53"
             protocol: ANY
